<?xml version="1.0"?>
<package format="2">
  <name>tf2_segv_reproduce</name>
  <version>0.0.0</version>
  <description>reproducing error</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>tf</depend>
</package>
